--- a/locales/en/project.json
+++ b/locales/en/project.json
@@ -6,20 +6,20 @@
   "category_label": "Category",
   "services_title": "Services Provided",
   "challenge_title": "The Challenge",
-  "solution_title": "Our Solution",
-  "results_title": "Results & Impact",
+  "solution_title": "The Approach",
+  "results_title": "Outcome & Impact",
   "external_links_title": "View on Other Platforms",
   "more_title_part1": "More",
   "more_title_part2": "Projects",
   "view_project": "View Project",
   "view_all_projects": "View All Projects",
-  "cta_title_part1": "INTERESTED IN",
-  "cta_title_part2": "WORKING TOGETHER?",
-  "cta_subtitle": "Let's create something amazing for your brand. Whether you need branding, web development, or design services, we're here to help.",
+  "cta_title_part1": "READY TO",
+  "cta_title_part2": "COLLABORATE?",
+  "cta_subtitle": "Let’s discuss how the right product design and technical solutions can help achieve your business goals.",
   "badge_showcase": "Project Showcase",
-  "badge_design": "Design Detail",
+  "badge_design": "Design Details",
   "badge_implementation": "Implementation",
-  "more_from_project": "More From This Project",
+  "more_from_project": "Project Breakdown",
   "platforms": {
     "behance": "View on Behance",
     "dribbble": "View on Dribbble",
