--- a/locales/id/project.json
+++ b/locales/id/project.json
@@ -1,25 +1,25 @@
 {
-  "back_to_portfolio": "Kembali ke Portfolio",
+  "back_to_portfolio": "Kembali ke Portofolio",
   "client_label": "Klien",
   "year_label": "Tahun",
   "duration_label": "Durasi",
   "category_label": "Kategori",
   "services_title": "Layanan yang Diberikan",
-  "challenge_title": "Tantangan",
-  "solution_title": "Solusi Kami",
+  "challenge_title": "Masalah",
+  "solution_title": "Pendekatan",
   "results_title": "Hasil & Dampak",
   "external_links_title": "Lihat di Platform Lain",
   "more_title_part1": "Proyek",
   "more_title_part2": "Lainnya",
   "view_project": "Lihat Proyek",
-  "view_all_projects": "Lihat Semua Proyek",
-  "cta_title_part1": "TERTARIK",
+  "view_all_projects": "Semua Proyek",
+  "cta_title_part1": "TERTARIK UNTUK",
   "cta_title_part2": "BERKOLABORASI?",
-  "cta_subtitle": "Mari ciptakan sesuatu yang luar biasa untuk brand Anda. Baik Anda butuh branding, pengembangan web, atau layanan desain, kami siap membantu.",
-  "badge_showcase": "Project Showcase",
-  "badge_design": "Design Detail",
+  "cta_subtitle": "Mari diskusikan bagaimana desain produk dan solusi teknis yang tepat dapat membantu tujuan bisnis Anda.",
+  "badge_showcase": "Showcase Proyek",
+  "badge_design": "Detail Desain",
   "badge_implementation": "Implementasi",
-  "more_from_project": "Lebih Banyak dari Proyek Ini",
+  "more_from_project": "Detail Proyek Ini",
   "platforms": {
     "behance": "Lihat di Behance",
     "dribbble": "Lihat di Dribbble",
