--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "title": "LET'S TALK",
-    "subtitle": "Ready to start your project? Get in touch and let's create something amazing together."
+    "subtitle": "Have a project idea or a technical challenge? Get in touch to start a discussion about your needs."
   },
   "info": {
     "title_part1": "GET IN",
@@ -17,22 +17,22 @@
     "hours_closed": "Closed"
   },
   "form": {
-    "title": "SEND US A MESSAGE",
+    "title": "SEND A MESSAGE",
     "name_label": "Name",
-    "name_placeholder": "Your name",
+    "name_placeholder": "Your full name",
     "email_label": "Email",
     "email_placeholder": "name@example.com",
-    "service_label": "Service Interested In",
-    "service_placeholder": "Select a service",
+    "service_label": "Service Required",
+    "service_placeholder": "Select a category",
     "message_label": "Message",
-    "message_placeholder": "Tell us about your project...",
+    "message_placeholder": "Briefly describe your project goals...",
     "send_message": "SEND MESSAGE",
     "sending": "Sending...",
-    "success_message": "Thank you! Your message has been sent. We'll get back to you soon.",
+    "success_message": "Thank you. I have received your message and will get back to you shortly.",
     "services": {
-      "graphic_design": "Graphic Design",
-      "web_development": "Web Development",
-      "branding": "Brand Strategy",
+      "graphic_design": "Visual Identity",
+      "web_development": "Digital Product Development",
+      "branding": "UI/UX Design",
       "other": "Other"
     }
   },
