--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,26 +1,26 @@
 {
   "hero": {
-    "title_part1": "WE CREATE",
-    "title_part2": "VISUAL MAGIC",
-    "subtitle": "Transform your brand with stunning graphic design and cutting-edge web development. We turn your vision into reality."
+    "title_part1": "BUILDING",
+    "title_part2": "DIGITAL PRODUCTS",
+    "subtitle": "Transforming businesses through structured product design and visual identity. Focusing on function, structure, and impactful results."
   },
   "services": {
-    "title": "WHAT WE DO",
+    "title": "SERVICES",
     "graphic_design": {
-      "title": "Graphic Design",
-      "desc": "From logos to complete brand identities, we create visuals that capture your essence and resonate with your audience."
+      "title": "Visual Identity",
+      "desc": "Building consistent visual systems, from logos to brand guidelines that accurately represent your business values."
     },
     "web_development": {
       "title": "Web Development",
-      "desc": "Modern, responsive websites built with the latest technologies. Fast, beautiful, and optimized for success."
+      "desc": "Technical execution for responsive and efficient web interfaces. Ensuring optimal performance across all devices."
     },
     "brand_strategy": {
-      "title": "Brand Strategy",
-      "desc": "Build a powerful brand that stands out. We help you define your identity and connect with your customers."
+      "title": "Interface Design (UI/UX)",
+      "desc": "Designing intuitive user flows to enhance customer interaction and streamline your digital business operations."
     }
   },
   "cta": {
-    "title": "READY TO START YOUR PROJECT?",
-    "subtitle": "Let's collaborate and create something amazing together."
+    "title": "READY TO DISCUSS?",
+    "subtitle": "Tell me about your project and let's build the right solution together."
   }
 }
