--- a/locales/en/services.json
+++ b/locales/en/services.json
@@ -18,7 +18,7 @@
     "title": "WEB DEVELOPMENT",
     "description": "Building a digital presence with modern, responsive websites. Focusing on speed, security, and user experience.",
     "features": [
-      "Custom Web Development)",
+      "Custom Web Development",
       "E-commerce Solutions",
       "Responsive & Mobile-First Design",
       "System & CMS Integration",
