--- a/locales/id/contact.json
+++ b/locales/id/contact.json
@@ -31,7 +31,7 @@
     "success_message": "Terima kasih. Pesan Anda telah saya terima, saya akan segera menghubungi Anda kembali.",
     "services": {
       "graphic_design": "Identitas Visual",
-      "web_development": "Pengembangan Produk Digital",
+      "web_development": "Pengembangan Web",
       "branding": "Desain UI/UX",
       "other": "Lainnya"
     }
